fix: The right side of the x-axis overflows with whitespace

--- a/src/css/home.scss
+++ b/src/css/home.scss
@@ -529,3 +529,7 @@
   width: 100%;
   height: 100%;
 }
+
+body {
+  overflow-x: hidden;
+}
